// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AspectRatioBox renders: for aspectRatio={1} 1`] = `
<AspectRatioBox>
  <AspectRatioBox
    forwardedRef={null}
  >
    <Block
      $aspectRatio={1}
      data-baseweb="aspect-ratio-box"
      overrides={
        Object {
          "Block": Object {
            "style": [Function],
          },
        }
      }
    >
      <Block
        $aspectRatio={1}
        data-baseweb="aspect-ratio-box"
        forwardedRef={null}
        overrides={
          Object {
            "Block": Object {
              "style": [Function],
            },
          }
        }
      >
        <ForwardRef
          $as="div"
          $aspectRatio={1}
          $style={[Function]}
          data-baseweb="aspect-ratio-box"
        >
          <MockStyledComponent
            $as="div"
            $aspectRatio={1}
            $style={[Function]}
            data-baseweb="aspect-ratio-box"
            forwardedRef={null}
          >
            <div
              data-baseweb="aspect-ratio-box"
              styled-component="true"
              test-style={
                Object {
                  "::after": Object {
                    "clear": "both",
                    "content": "\\"\\"",
                    "display": "table",
                  },
                  "::before": Object {
                    "content": "\\"\\"",
                    "float": "left",
                    "height": 0,
                    "marginLeft": "-1px",
                    "paddingTop": "100%",
                    "pointerEvents": "none",
                    "width": "1px",
                  },
                  "position": "relative",
                }
              }
            />
          </MockStyledComponent>
        </ForwardRef>
      </Block>
    </Block>
  </AspectRatioBox>
</AspectRatioBox>
`;

exports[`AspectRatioBox renders: for aspectRatio={16 / 9} 1`] = `
<AspectRatioBox
  aspectRatio={1.7777777777777777}
>
  <AspectRatioBox
    aspectRatio={1.7777777777777777}
    forwardedRef={null}
  >
    <Block
      $aspectRatio={1.7777777777777777}
      data-baseweb="aspect-ratio-box"
      overrides={
        Object {
          "Block": Object {
            "style": [Function],
          },
        }
      }
    >
      <Block
        $aspectRatio={1.7777777777777777}
        data-baseweb="aspect-ratio-box"
        forwardedRef={null}
        overrides={
          Object {
            "Block": Object {
              "style": [Function],
            },
          }
        }
      >
        <ForwardRef
          $as="div"
          $aspectRatio={1.7777777777777777}
          $style={[Function]}
          data-baseweb="aspect-ratio-box"
        >
          <MockStyledComponent
            $as="div"
            $aspectRatio={1.7777777777777777}
            $style={[Function]}
            data-baseweb="aspect-ratio-box"
            forwardedRef={null}
          >
            <div
              data-baseweb="aspect-ratio-box"
              styled-component="true"
              test-style={
                Object {
                  "::after": Object {
                    "clear": "both",
                    "content": "\\"\\"",
                    "display": "table",
                  },
                  "::before": Object {
                    "content": "\\"\\"",
                    "float": "left",
                    "height": 0,
                    "marginLeft": "-1px",
                    "paddingTop": "56.25%",
                    "pointerEvents": "none",
                    "width": "1px",
                  },
                  "position": "relative",
                }
              }
            />
          </MockStyledComponent>
        </ForwardRef>
      </Block>
    </Block>
  </AspectRatioBox>
</AspectRatioBox>
`;

exports[`AspectRatioBox renders: with overridden styles 1`] = `
<AspectRatioBox
  aspectRatio={1.7777777777777777}
  overrides={
    Object {
      "Block": Object {
        "style": Object {
          "marginBottom": "10px",
        },
      },
    }
  }
>
  <AspectRatioBox
    aspectRatio={1.7777777777777777}
    forwardedRef={null}
    overrides={
      Object {
        "Block": Object {
          "style": Object {
            "marginBottom": "10px",
          },
        },
      }
    }
  >
    <Block
      $aspectRatio={1.7777777777777777}
      data-baseweb="aspect-ratio-box"
      overrides={
        Object {
          "Block": Object {
            "style": [Function],
          },
        }
      }
    >
      <Block
        $aspectRatio={1.7777777777777777}
        data-baseweb="aspect-ratio-box"
        forwardedRef={null}
        overrides={
          Object {
            "Block": Object {
              "style": [Function],
            },
          }
        }
      >
        <ForwardRef
          $as="div"
          $aspectRatio={1.7777777777777777}
          $style={[Function]}
          data-baseweb="aspect-ratio-box"
        >
          <MockStyledComponent
            $as="div"
            $aspectRatio={1.7777777777777777}
            $style={[Function]}
            data-baseweb="aspect-ratio-box"
            forwardedRef={null}
          >
            <div
              data-baseweb="aspect-ratio-box"
              styled-component="true"
              test-style={
                Object {
                  "::after": Object {
                    "clear": "both",
                    "content": "\\"\\"",
                    "display": "table",
                  },
                  "::before": Object {
                    "content": "\\"\\"",
                    "float": "left",
                    "height": 0,
                    "marginLeft": "-1px",
                    "paddingTop": "56.25%",
                    "pointerEvents": "none",
                    "width": "1px",
                  },
                  "marginBottom": "10px",
                  "position": "relative",
                }
              }
            />
          </MockStyledComponent>
        </ForwardRef>
      </Block>
    </Block>
  </AspectRatioBox>
</AspectRatioBox>
`;
